Finalizado Julia y comienzo de Mandelbrot (#41)

--- a/memoria/preamble.sty
+++ b/memoria/preamble.sty
@@ -30,6 +30,7 @@
 \usepackage{amsthm, amssymb}
 \usepackage{amsmath}
 \newtheorem{teorema}{Teorema}[section]
+\newtheorem{corolario}{Corolario}[section]
 \theoremstyle{definition}
 \newtheorem{definicion}{Definición}[section]
 \newtheorem{observacion}{Observación}[section]
