Terminado de redactar el capítulo 3 (#41)

--- a/memoria/preamble.sty
+++ b/memoria/preamble.sty
@@ -25,6 +25,7 @@
 \usepackage[spanish, es-tabla]{babel}
 \decimalpoint
 
+\lstset{basicstyle=\small\ttfamily}
 %\usepackage{helvet}
 
 \usepackage{amsthm, amssymb}
