--- a/memoria/tex/capitulos/capitulo-3.tex
+++ b/memoria/tex/capitulos/capitulo-3.tex
@@ -94,6 +94,7 @@ Dado un número $c\in\C$, se define su \textbf{conjunto de Julia}, y se denota c
 \end{observacion}
 
 \subsection{Representación gráfica de los conjuntos de Julia}
+\label{subsection:representacion-julia}
 
 Tenemos entonces una definición de los conjuntos de Julia, pero aparentemente está muy alejada de las imágenes \ref{fig:julia-intro} que presentamos en la introducción. La forma de llegar a ellas es similar a la que utilizamos para graficar las imágenes que utilizaban la velocidad de convergencia en el capítulo \ref{chap:iteracion}. Sin embargo, y al contrario que al utilizar el método de Newton, ahora no tenemos ningún tipo de convergencia asegurada, por lo que el método de aplicar iteradas hasta encontrar un patrón no es el más correcto. Debemos por tanto encontrar una manera eficiente de clasificar cada punto del plano como prisionero o de escape. 
 
@@ -194,8 +195,195 @@ Por resumir, de momento sabemos que:
 
 \subsection{Representación gráfica del conjunto de Mandelbrot}
 
-Buscamos ahora obtener alguna figura similar a la imagen \ref{fig:mandelbrot-intro} a partir del conocimiento que tenemos de $mathcal M$. Como ya viene siendo costumbre, la idea es dividir el plano en una cantidad finita de píxeles, asignando a cada uno un número complejo $c$ y evaluar en cada uno si la órbita en $z=0$ converge o diverge. Para tomar esta decisión nos podemos apoyar en el teorema \ref{th:escape} para probar este resultado.
+Buscamos ahora obtener alguna figura similar a la imagen \ref{fig:mandelbrot-intro} a partir del conocimiento que tenemos de $\mathcal M$. Como ya viene siendo costumbre, la idea es dividir el plano en una cantidad finita de píxeles, asignando a cada uno un número complejo $c$ y evaluar en cada uno si la órbita en $z=0$ converge o diverge. Para tomar esta decisión nos podemos apoyar en el teorema \ref{th:escape} para probar este resultado.
 
 \begin{proposicion}
+  \label{prop:mandelbrot-escape}
   Dado un número complejo $c\in\C$, si $|c|>2$ entonces la sucesión de iteradas $\{P_c^n(0)\}$ es divergente.
 \end{proposicion}
+\begin{proof}
+  Consideramos la sucesión de iteradas $z_0 = 0, z_n=P_c^n(0)$. Partimos de que $|c|>2$, por lo que buscamos encontrar un $m\in\N$ tal que $|z_n|>e_c=\max\{|c|,2\}=|c|$.
+  
+  Tenemos que $z_1=P_c(0)=c$, pero $|z_1|=|c|\not>|c|$.
+  
+  Si iteramos una vez más, $z_2=P_c^2(0)=P_c(c)=c^2+c$. Ayudándonos de una propiedad del módulo tenemos que:
+  \begin{eqnarray*}
+    |c^2+c| & \geq & ||c^2|-|c|| \\
+            & = & ||c|^2 -|c|| \\
+            & = & |c|^2-|c| \text{ (Pues al ser } |c|>2, |c|^2>|c|) \\
+            & = & (|c|-1)|c| 
+  \end{eqnarray*}
+  Y como $|c|>2\Leftrightarrow |c|-1>1$, concluimos que
+  $$
+  |z_2|=|c^2+c| > |c| = \max\{|c|,2\} = e_c
+  $$
+  Por lo que aplicando el teorema \ref{th:escape}, la sucesión $\{z_n\}$ es divergente.
+\end{proof}
+
+Este resultado nos facilita mucho la elaboración de un algoritmo que grafique a $\mathcal{M}$, pues de entrada nos afirma que todo número complejo cuyo módulo sea superior a $2$ no pertenece a $\mathcal M$. O dicho de otra forma, 
+$$
+\mathcal{M}\subseteq \{c\in\C: |c|\leq 2\} = \bar D(0,2),
+$$
+donde $D(z,r)$ denota el disco abierto de centro $z$ y radio $r$ mientras que $\bar D(z,r)$ denota el cierre del disco abierto, es decir, el disco cerrado de centro $z$ y radio $r$.
+
+Además, en el momento que una iterada se sitúe fuera de $\bar D(0,2)$, podemos asegurar que esa sucesión va a diverger, por lo que podemos dejar de iterar. Para concluir que la sucesión no diverge, al igual que para graficar conjuntos de Julia, fijamos un número máximo de iteraciones $M\in\N$, de forma que si al calcular la $M$-ésima iterada el módulo del elemento $P_c^{M}(0)$ no ha excedido a $2$, podemos considerar que el número $c$ pertenece a $\mathcal{M}$. En conclusión, el algoritmo consiste en, para cada píxel identificado con un punto del plano complejo $c\in\C$, calcular sus iteradas hasta un máximo de $M$ iteraciones, en caso de exceder en módulo a $2$ guardamos el mínimo valor $m\in\N$ tal que $|P_c^m(0)|>2$ y asignamos un color en función; en caso de no exceder a $2$ asignar un color fijo.
+
+El código en \textit{Mathematica} utilizado es por tanto el siguiente, muy similar al utilizado para graficar conjuntos de Julia:
+
+\begin{lstlisting}[label=code:Mandelbrot, caption=Código que grafica el conjunto de Mandelbrot]
+  M = 100; 
+  Mandelbrot = Compile[{{c, _Complex}}, 
+  Length[FixedPointList[#^2 + c &, 0, M, SameTest -> (Abs[#] > 2.0 &)]]];
+
+  DensityPlot[Mandelbrot[x + I y], {x, -2.1, .7}, {y, -1.2, 1.2}, 
+    Mesh -> False, Frame -> False, PlotPoints -> 200, 
+    AspectRatio -> Automatic, 
+    ColorFunction -> (If[# >= 1, Hue[0, 0, 0], Hue[#]] &)]
+
+\end{lstlisting}
+
+Al igual que en el caso de los conjuntos de Julia, \textit{Mathematica} tiene una función preprogramada que grafica el conjunto de Mandelbrot, llamada \verb|MandelbrotSetPlot|, la cual admite varios argumentos opcionales, como la región a graficar, el máximo de iteraciones, resolución, etc.\footnote{Más información en la documentación oficial \url{https://reference.wolfram.com/language/ref/MandelbrotSetPlot.html}}. 
+
+\begin{figure}[ht]
+  \centering
+  \begin{tabular}{cc}
+    \includegraphics[scale=0.54]{./img/C3/Mandelbrot-Mathematica.png} &   \includegraphics[scale=0.46]{./img/C3/MandelbrotSetPlot.png} \\
+  (a) Salida del código \ref{code:Mandelbrot}  & (b) Salida de la orden `MandelbrotSetPlot' \\[6pt]
+  \end{tabular}
+  \caption{Representación de $\mathcal{M}$ y detalle entre $-0.65+0.47i$ y $-0.4+0.72i$}
+  \label{fig:Mandelbrot-explicado}
+\end{figure}
+
+El conjunto de Mandelbrot es considerado por muchos como el objeto más complejo de la matemática. Además de la belleza que muestra por sí solo, los detalles de $\mathcal{M}$ esconden bonitas estructuras: bulbos, valles, antenas, copias reducidas del propio $\mathcal{M}$\dots
+
+\section{Autosimilaridad de los conjuntos de Julia y Mandelbrot}
+
+Ya en el comienzo de este capítulo mencionamos, y en las propias imágenes presentadas se puede comprobar, que los conjuntos de Julia y el conjunto de Mandelbrot no son objetos autosimilares, no al menos en el sentido de la definición \ref{def:autosimilaridad}. Sin embargo, sí contienen regiones y detalles que son autosimilares. En esta sección presentaremos algunas de las mismas.
+
+\subsection{Autosimilaridad en conjuntos de Julia}
+
+Recordemos el conjunto de Julia $\mathsf{J}_{-0.23+0.65}$, que podemos ver en la imagen \ref{fig:julia-explicados} (b). En las imágenes \ref{fig:detalles-julia} podemos ver distintos detalles, de forma que la primera es una ampliación de la original y las siguientes son cada una un `zoom' de la anterior.
+
+\begin{figure}[ht]
+  \begin{tabular}{ccc}
+    \includegraphics[scale=0.33]{./img/C3/julia-autosimilar-1.png} &   \includegraphics[scale=0.33]{./img/C3/julia-autosimilar-2.png} &   \includegraphics[scale=0.33]{./img/C3/julia-autosimilar-3.png} \\
+  (a) $[-0.2,1.5]\times[-1.2,0.5]$ & (b) $[0.6,1.4]\times[-0.9,-0.1]$ & (c) $[1.05,1.35]\times[-0.65,-0.35]$ \\[6pt]
+  \end{tabular}
+  \caption{Diferentes regiones ampliadas de la figura \ref{fig:julia-explicados} (b)}
+  \label{fig:detalles-julia}
+\end{figure}
+
+Obsérvese cómo efectivamente las imágenes, salvo giro, son prácticamente iguales, pudiendo ver así una de las regiones autosimilares de $\mathsf{J}_{-0.23+0.65}$.
+
+\begin{figure}[ht]
+  \centering
+  \begin{tabular}{cc}
+    \includegraphics[scale=0.39]{./img/C3/julia-autosimilar-4.png} &   \includegraphics[scale=0.39]{./img/C3/julia-autosimilar-5.png} \\
+  (a) $\mathsf{J}_{0.33-0.41 i}$ en $[-1,-0.3]\times[-1.1,-0.4]$ & (b) $\mathsf{J}_{0.45-0.62 i}$ en $[-0.8,0.2]\times[-0.8,0.2]$ \\[6pt]
+  \includegraphics[scale=0.39]{./img/C3/julia-autosimilar-6.png} &   \includegraphics[scale=0.39]{./img/C3/julia-autosimilar-7.png} \\
+  (c) $\mathsf{J}_{0.23+0.51i}$ en $[-1.1,-0.4]\times[0.4,1.1]$ & (d) $\mathsf{J}_{-0.52+0.51 i}$ en $[0,1.5]\times[-1,0.5]$ \\[6pt]
+  \end{tabular}
+  \caption{Detalles autosimilares de algunos conjuntos de Julia}
+  \label{fig:mas-detalles-julia}
+\end{figure}
+
+\subsection{Autosimilaridad en el conjunto de Mandelbrot}
+
+El conjunto de Mandelbrot, el cual ya conocemos, está compuesto fundamentalmente de un cuerpo principal con forma de cardioide con gran catidad de bulbos adosados al mismo (imagen \ref{fig:detalles-mandelbrot} (a), (b) y (c)), siendo cada uno de estos autosimilar y terminando en una antena que se bifurca (imagen \ref{fig:detalles-mandelbrot} (b) y (c)). Además, en el propio $\mathcal{M}$ hay minúsculas copias de sí mismo, en las cuales se vuelve a repetir su estructura (imagen \ref{fig:detalles-mandelbrot} (c)).
+
+\begin{figure}[ht]
+  \centering
+  \begin{tabular}{cc}
+    \includegraphics[scale=0.4]{./img/C3/mandelbrot-autosimilar-1.png} &   \includegraphics[scale=0.4]{./img/C3/mandelbrot-autosimilar-2.png} \\
+  (a) $[-1,-0.5]\times[0,0.5]$ & (b) $[-1.5,-1.2]\times[-0.15,0.15]$ \\[6pt]
+  \includegraphics[scale=0.4]{./img/C3/mandelbrot-autosimilar-3.png} &   \includegraphics[scale=0.4]{./img/C3/mandelbrot-autosimilar-4.png} \\
+  (c) $[-0.2,0]\times[-1.1,-0.9]$ & (d) $[-0.9,0.3]\times[-1,0.2]$ \\[6pt]
+  \end{tabular}
+  \caption{Detalles autosimilares de $\mathcal{M}$}
+  \label{fig:detalles-mandelbrot}
+\end{figure}
+
+En la imagen \ref{fig:detalles-mandelbrot} (b) podemos ver una representación del que se conoce como `bulbo principal', pues es el más grande de todos los que están pegados al cuerpo principal. Podemos comprobar, observando los detalles que ofrecen las imágenes \ref{fig:detalles-bulbo}, que dicho bulbo muestra autosimilaridad.
+
+\begin{figure}[ht]
+  \centering
+  \begin{tabular}{cc}
+    \includegraphics[scale=0.4]{./img/C3/mandelbrot-autosimilar-5.png} &   \includegraphics[scale=0.4]{./img/C3/mandelbrot-autosimilar-6.png} \\
+  (a) $[-1.42,-1.36]\times[-0.03,0.03]$  & (b) $[-1.405,-1.39]\times[-0.0075,0.0075]$ \\[6pt]
+  \end{tabular}
+  \caption{Ampliaciones del bulbo principal de $\mathcal{M}$}
+  \label{fig:detalles-bulbo}
+\end{figure}
+
+\section{Conjuntos de Julia y Mandelbrot generalizados}
+
+Hasta el momento todo lo explicado y todas las imágenes obtenidas se han basado en la familia de funciones $\{P_c(z)\}_{c\in\C}=\{z^2+c\}_{c\in\C}$. Sin embargo, y como cabe esperar, la definición de los conjuntos de Julia como conjuntos frontera entre el conjunto de puntos prisioneros y de escape es completamente válido para las iteradas de cualquier función, o mejor dicho, para cualquier familia de funciones. En esta sección trataremos de extender los conocimientos obtenidos hasta ahora a otras funciones.
+
+\subsection{Familia $\{z^N+c\}_{c\in\C}$}
+
+La extensión más natural y la que nos proporcionará resultados más llamativos consiste en cambiar el exponente de la función polinómica $P_c(z)$, a la cual ahora denotaremos como $P_{c,N}(z)=z^N+c$, con $N\geq 2$ natural para enfatizar el exponente. Es fácil comprobar que el teorema \ref{th:escape} es igual de válido con esta familia de funciones independientemente del exponente, por lo que el algoritmo sigue siendo el mismo, solo que en la función \verb|Julia| debemos cambiar el exponente. Además, la orden \verb|JuliaSetPlot| ya presentada en la sección \ref{subsection:representacion-julia} admite la posibilidad de indicarle una función arbitraria. Es esta la forma en la que hemos graficado las imágenes \ref{fig:julia-generalizados}.
+
+\begin{figure}[ht]
+  \centering
+  \begin{tabular}{cc}
+    \includegraphics[scale=0.5]{./img/C3/julia-generalizado-2.png} &   \includegraphics[scale=0.37]{./img/C3/julia-generalizado-3.png} \\
+  (a) $z^2-0.55+0.48i$ & (b) $z^3-0.55+0.48i$ \\[6pt]
+  \includegraphics[scale=0.37]{./img/C3/julia-generalizado-4.png} &   \includegraphics[scale=0.37]{./img/C3/julia-generalizado-5.png} \\
+  (c) $z^4-0.55+0.48i$ & (d) $z^5-0.55+0.48i$ \\[6pt]
+  \end{tabular}
+  \caption{Conjuntos de Julia con $P_{-0.55+0.48i, N}$ para distintos valores de $N$.}
+  \label{fig:julia-generalizados}
+\end{figure}
+
+
+Fijémonos en que hemos fijado $c=-0.55+0.48$ y hemos variado el exponente de la función polinómica. Llama la atención lo distintos que son los conjuntos entre sí cuando realmente el $c$ fijado es el mismo en todos los casos. 
+
+Como ya comentamos en la sección \ref{section:conexos-polvaredas}, el teorema \ref{th:fatou-julia} (teorema de la dicotomía de Fatou-Julia) es válido para cualquier polinomio de grado mayor o igual que 2, en particular es válido para la familia de funciones $\{P_{c,N}(z)\}_{c\in\C}$. Tenemos por tanto que de la misma forma es válido el corolario, por lo que la distinción entre conjuntos de Julia conexos y polvaredas se vuelve a basar en buscar la convergencia o divergencia de la sucesión $\{P_{c,N}^n(0)\}$.
+
+De esta forma, podemos hablar por tanto de conjuntos de Mandelbrot generalizados como representación gráfica de qué puntos tienen un conjunto de Julia conexo o polvareda utilizando la función $P_{c,N}(z)$, en cuyo lo denotamos como $\mathcal{M}_N$. De la misma forma que el resultado \ref{th:escape} es válido en la generalización, la proposición \ref{prop:mandelbrot-escape} también lo es, por lo que podemos también reutilizar el código que empleamos para representar el conjunto de Mandelbrot con tan solo variar el exponente, ver imágenes \ref{fig:mandelbrot-generalizados}. Por su parte, la función de \textit{Mathematica} \verb|MandelbrotSetPlot| admite un argumento \verb|n| que representa el exponente de $P_{c,N}(z).$ a la hora de iterar.
+
+\begin{figure}[ht]
+  \centering
+  \includegraphics[scale=0.7]{./img/C3/mandelbrot-generalizado.png}
+  \caption{Conjuntos de Mandelbrot $\mathcal{M}_N$ para $N=3,4,8,10$}
+  \label{fig:mandelbrot-generalizados}
+\end{figure}
+
+Finalmente, invitamos al lector a visitar una web interactiva en la que poder visualizar tantos conjuntos de Julia y Mandelbrot estándar y generalizados como desee. La web forma parte del proyecto y su url es \url{https://jantoniovr.github.io/Geometria-Fractal/}(WIP).%TODO Modificar si es necesario esta URL
+
+\subsection{Conjuntos de Julia con funciones no polinómicas}
+
+Además de todos los conjuntos de Julia ya tratados y visualizados, utilizando otras funciones no polinómicas como pueden ser las trigonométricas y las exponenciales (complejas) también se pueden graficar algunos conjuntos con formas distintas a las ya vistas y con hermosas propiedades. A continuación mostraremos tan solo algunos ejemplos:
+
+\begin{itemize}
+  \item Con la familia $f_c(z)=c\cdot \sin(z)$:
+  
+\begin{figure}[ht]
+  \centering
+  \begin{tabular}{cc}
+    \includegraphics[scale=0.5]{./img/C3/juliaS-1.png} &   \includegraphics[scale=0.5]{./img/C3/juliaS-2.png}
+  \end{tabular}
+\end{figure}
+
+
+\item Con la familia $f_c(z)=c\cdot \cos(z)$:
+  
+\begin{figure}[ht]
+  \centering
+  \begin{tabular}{cc}
+    \includegraphics[scale=0.5]{./img/C3/juliaC-1.png} &   \includegraphics[scale=0.5]{./img/C3/juliaC-2.png}
+  \end{tabular}
+\end{figure}
+
+\newpage
+
+\item Con la familia $f_c(z)=c\cdot e^z$:
+  
+\begin{figure}[ht]
+  \centering
+  \begin{tabular}{cc}
+    \includegraphics[scale=0.5]{./img/C3/juliaE-1.png} &   \includegraphics[scale=0.5]{./img/C3/juliaE-2.png}
+  \end{tabular}
+\end{figure}
+
+\end{itemize}
