Cambiada referencia del cap. 1

--- a/memoria/tex/capitulos/capitulo-1.tex
+++ b/memoria/tex/capitulos/capitulo-1.tex
@@ -394,7 +394,7 @@ En $\R^2$ dotado de la topología usual, consideramos una recta cualquiera, llam
 
 \subsection{Relación entre los distintos tipos de dimensión fractal}
 
-La dimensión por cajas, aunque útil en la práctica, al comienzo de la sección \ref{subsection:dim-Hausdorff} hemos comprobado que tiene algunos problemas. No obstante, para muchos fractales, y en particular para los que cumplen la \textit{condición de conjunto abierto}\footnote{Wagon, S. (2010). Mathematica in Action. Springer Publishing. p. 124}, resulta más sencillo computacionalmente calcular su dimensión por cajas frente a su dimensión de Hausdorff.
+La dimensión por cajas, aunque útil en la práctica, al comienzo de la sección \ref{subsection:dim-Hausdorff} hemos comprobado que tiene algunos problemas. No obstante, para muchos fractales, y en particular para los que cumplen la \textit{condición de conjunto abierto} (véase \cite{Wagon}), resulta más sencillo computacionalmente calcular su dimensión por cajas frente a su dimensión de Hausdorff.
 
 En general, y como se puede comprobar en \cite[Sección 3.1]{alma991007022459704990}, ocurre que la dimensión por cajas acota superiormente a la dimensión de Hausdorff, esto es, dado $A\subset\R^n$:
 $$
