--- a/memoria/tex/capitulos/capitulo-3.tex
+++ b/memoria/tex/capitulos/capitulo-3.tex
@@ -26,15 +26,15 @@ Una notable diferencia entre las imágenes \ref{fig:julia-intro} se encuentra en
     \label{fig:mandelbrot-intro}
 \end{figure}
 
-En este capítulo aprenderemos qué elementos componen estos conjuntos, y cómo llegar a estas imágenes tan llamativas.
+En este capítulo aprenderemos qué elementos componen estos conjuntos, y cómo llegar a visualizar estas imágenes tan llamativas.
 
 \section{Iteración convergente y no convergente}
 
-Recordamos que en el capítulo \refname{chap:iteracion}, a partir de una función analítica $f:\C\longrightarrow\C$, se le aplicaba una transformación $N_f(z)$ de forma que en muchos casos la iteración de dicha función era convergente independientemente del término $z_0\in\C$ inicial. Sin embargo recordemos que la iteración de una función cualquiera $f$ no siempre es convergente, como pudimos comprobar en el ejemplo situado al comienzo de la sección \ref{subsection:convergencia-punto-fijo}, en el que comprobamos que las iteradas de la función $f(z)=z^2$ divergen siempre que $|z_0|>1$, convergen a $0$ si $|z_0|<1$ y quedan encerradas en $S^1$ en caso de que $|z_0|=1$. Otro posible comportamiento es el cíclico, como el que tienen las iteradas de la función $g(z)=z\cdot i$ en $z_0=1$, que si nos fijamos, $O_g(1)=\{1,i,-1,-i,1,\dots\}$. 
+Recordamos que en el capítulo \ref{chap:iteracion}, a partir de una función analítica $f:\C\longrightarrow\C$, se le aplicaba una transformación $N_f(z)$ de forma que en muchos casos la iteración de dicha función era convergente independientemente del término $z_0\in\C$ inicial. Sin embargo recordemos que la iteración de una función cualquiera $f$ no siempre es convergente, como pudimos comprobar en el ejemplo situado al comienzo de la sección \ref{subsection:convergencia-punto-fijo}, en el que comprobamos que las iteradas de la función $f(z)=z^2$ divergen siempre que $|z_0|>1$, convergen a $0$ si $|z_0|<1$ y quedan encerradas en $S^1$ en caso de que $|z_0|=1$. Otro posible comportamiento es el cíclico, como el que tienen las iteradas de la función $g(z)=z\cdot i$ en $z_0=1$, que si nos fijamos, $O_g(1)=\{1,i,-1,-i,1,\dots\}$. 
 
 Un último caso de posible comportamiento de una órbita son las órbitas caóticas, en las cuales no se percibe ningún patrón y además es muy sensible a las condiciones iniciales, fijémonos en lo que ocurre en el caso de la función $h(z)=z^2-1.9$ si miramos sus órbitas en $z_0=0,0.1$:
 
-\begin{verbatim}
+\begin{lstlisting}
 In[]:= h[z_] := z^2 - 1.9;
     NestList[h, 0.1, 20]
     NestList[h, 0.0, 20]
@@ -49,7 +49,7 @@ Out[]= {0., -1.9, 1.71, 1.0241, -0.851219, -1.17543, -0.518374,
   -1.63129, 0.761102, -1.32072, -0.155688, -1.87576, 1.61848, 
   0.719477, -1.38235, 0.0109007, -1.89988, 1.70955, 1.02256, 
   -0.854379, -1.17004}
-\end{verbatim}
+\end{lstlisting}
 
 No se observa ningún patrón de convergencia y además, a pesar de ser semillas muy cercanas, las órbitas son muy diferentes.
 
@@ -80,13 +80,13 @@ A partir de estas dos definiciones, que insisten en clasificar los puntos del pl
 \textit{He buscado información acerca de la duda que le planteé y ya tendría material para completar formalmente este apartado. Sin embargo, creo que es un poco técnica y realmente no termino de entenderla bien. La realidad es que se define el conjunto de Julia como el conjunto de puntos en los que la dinámica es caótica y por una serie de resultados acaba siendo equivalente a estas definiciones más sencillas. Pero para llegar a eso hay que meter artillería un poco pesada y quizá un poco fuera de contexto. Podemos verlo juntos y en función decidir.}
 
 \begin{definicion}[Conjunto de Julia]
-Dado un número $c\in\C$, se define su \textbf{conjunto de Julia}, y se denota como $\mathsf{J}_c$ a la frontera de $\mathsf{E}_c$. Es en este conjunto donde las iteradas tienen un comportamiento caótico. Se denomina \textbf{conjunto de Fatou} al complemento del conjunto de Julia.
+Dado un número $c\in\C$, se define su \textbf{conjunto de Julia}, y se denota como $\mathcal{J}_c$ a la frontera de $\mathsf{E}_c$. Es en este conjunto donde las iteradas tienen un comportamiento caótico. Se denomina \textbf{conjunto de Fatou} al complemento del conjunto de Julia.
 \end{definicion}
 
 
 
 \begin{ejemplo}
-  En el caso $c=0$, es decir, $P_0(z)=z^2$, sabemos ya que $E_c=S^1$, pues precisamente es $S^1$ la frontera entre los puntos cuyas iteradas divergen o convergen a $0$.
+  En el caso $c=0$, es decir, $P_0(z)=z^2$, sabemos ya que $\mathcal{J}_c=S^1$, pues precisamente es $S^1$ la frontera entre los puntos cuyas iteradas divergen o convergen a $0$.
 \end{ejemplo}
 
 \begin{observacion}
@@ -98,7 +98,7 @@ Dado un número $c\in\C$, se define su \textbf{conjunto de Julia}, y se denota c
 
 Tenemos entonces una definición de los conjuntos de Julia, pero aparentemente está muy alejada de las imágenes \ref{fig:julia-intro} que presentamos en la introducción. La forma de llegar a ellas es similar a la que utilizamos para graficar las imágenes que utilizaban la velocidad de convergencia en el capítulo \ref{chap:iteracion}. Sin embargo, y al contrario que al utilizar el método de Newton, ahora no tenemos ningún tipo de convergencia asegurada, por lo que el método de aplicar iteradas hasta encontrar un patrón no es el más correcto. Debemos por tanto encontrar una manera eficiente de clasificar cada punto del plano como prisionero o de escape. 
 
-Para ello podemos fijarnos en que la operación de elevar $z_n$ al cuadrado prima sobre la de sumar una constante $c$ siempre que el módulo $|z_n|$ sea 'suficientemente grande'. Procedemos entonces a enunciar el siguiente resultado:
+Para ello podemos fijarnos en que la operación de elevar $z_n$ al cuadrado prima sobre la de sumar una constante $c$ siempre que el módulo $|z_n|$ sea `suficientemente grande'. Procedemos entonces a enunciar el siguiente resultado:
 
 \begin{teorema}
 \label{th:escape}
@@ -108,20 +108,20 @@ Para ello podemos fijarnos en que la operación de elevar $z_n$ al cuadrado prim
   Supongamos que $|z_0|>e_c=\max\{|c|,2\}$, por tanto necesariamente debe existir un número $\varepsilon>0$ tal que $|z_0| = 2 + \varepsilon$. Aplicamos entonces la cadena de desigualdades siguiente:
   \begin{eqnarray*}
     |P_c(z_0)| = |z_0^2 + c| & \geq & |z_0^2| - |c|\text{  (Propiedades del módulo)} \\
-    & = & |z_0|^2 - c \\
+    & = & |z_0|^2 - |c| \\
     & \geq & |z_0|^2 - |z_0|\text{  (Porque } |z_0|>|c| \text{)} \\
     & = & (|z_0|-1)|z_0| \\
     & = & (1 + \varepsilon)|z_0|
   \end{eqnarray*}
 
-  Por tanto tenemos que $|P_c(z_0)|\geq(1 + \varepsilon)|z_0|$, por lo que en cada iteración el módulo aumenta $1+\varepsilon$ unidades, que es mayor que uno, es decir, $|P_c^k(z_0)|\geq(1+\varepsilon)^k|z_0|$, por lo que la sucesión diverge y $z_0$ es un punto de escape. 
+  Por tanto tenemos que $|P_c(z_0)|\geq(1 + \varepsilon)|z_0|$, por lo que en cada iteración el módulo aumenta al menos $1+\varepsilon$ unidades, que es mayor que uno, es decir, $|P_c^k(z_0)|\geq(1+\varepsilon)^k|z_0|$, por lo que la sucesión diverge y $z_0$ es un punto de escape. 
 \end{proof}
 
 Podemos aplicar este teorema para programar un algoritmo que grafique conjuntos de Julia. Para ello, fijamos un número $M\in\N$ que será el máximo de iteraciones que se aplicarán en cada punto antes de decidir si el punto es prisionero o de escape. Si pasadas esas $M$ iteraciones el módulo de $z_0$ no ha alcanzado el número de escape $e_c$ entonces consideramos que $z_0$ es un punto prisionero. En caso contrario, en el momento que se alcance el número de escape cesarán las iteraciones y se etiquetará el punto como prisionero. El valor de $M$ puede ser alto si queremos aumentar la precisión a cambio de mayor tiempo de cómputo, y viceversa. Es posible que algunos de los puntos sean de escape pero alcancen $e_c$ después de las $M$ iteraciones, pero tomando un valor suficientemente alto el resultado es prácticamente el mismo.
 
-Para graficar un conjunto de Julia podemos asignar un color fijo a los puntos prisioneros y a los puntos de escape asignarle otro en función de las iteraciones necesarias antes de alcanzar el número de escape. Por ejemplo, si queremos representar en \textit{Mathematica} el conjunto de la figura \ref{fig:julia-intro} (a), que era $\mathsf{J}_{-0.12+0.75i}$ utilizaríamos el siguiente código:
+Para graficar un conjunto de Julia podemos asignar un color fijo a los puntos prisioneros y a los puntos de escape asignarle otro en función de las iteraciones necesarias antes de alcanzar el número de escape. Por ejemplo, si queremos representar en \textit{Mathematica} el conjunto de la figura \ref{fig:julia-intro} (a), que era $\mathcal{J}_{-0.12+0.75i}$ utilizaríamos el siguiente código:
 
-\begin{verbatim}
+\begin{lstlisting}
 M = 50;
 Julia[z_, c_] := Length[FixedPointList[#^2 + c &, z, M, 
     SameTest -> (Abs[#] > Max[2.0, Abs[c]] &)]];
@@ -130,9 +130,9 @@ DensityPlot[
       Julia[x + I y, -0.12 + 0.75 I], {x, -1.5, 1.5}, 
       {y, -1.25, 1.25}, PlotPoints->200, AspectRatio->Automatic, 
       ColorFunction -> (If[# >= 1, RGBColor[0, 0, 0], Hue[#]] &) ]
-\end{verbatim}
+\end{lstlisting}
 
-Fijémonos en que hemos utilizado el argumento \verb|SameTest| para especificar cuando dejar de iterar, especificando que se haga cuando se alcance $e_c$. Hemos utilizado también $M=50$ como máximo número de iteraciones. Podemos variar el segundo argumento de la llamada a la función \verb|Julia|, el rango de valores, el argumento \verb|PlotPoints| o el número máximo de iteraciones $M$ para graficar distintos conjuntos y detalles de dichos conjuntos. Algunos ejemplos de resultados de estos códigos se encuentran en la imagen \ref{fig:julia-explicados}.
+Fijémonos en que hemos utilizado el argumento \verb|SameTest| para especificar cuando dejar de iterar, especificando que se haga cuando se alcance $e_c$. Hemos utilizado también $M=50$ como máximo número de iteraciones. Podemos variar el segundo argumento de la llamada a la función \verb|Julia|, el rango de valores, el argumento \verb|PlotPoints| o el número máximo de iteraciones $M$ para graficar distintos conjuntos y detalles de los mismos. Algunos ejemplos de resultados de estos códigos se encuentran en la imagen \ref{fig:julia-explicados}.
 
 \begin{figure}[ht]
   \centering
@@ -144,7 +144,7 @@ Fijémonos en que hemos utilizado el argumento \verb|SameTest| para especificar 
   \label{fig:julia-explicados}
 \end{figure}
 
-Por sí solo Mathematica incluye una función \verb|JuliaSetPlot[c]| que muestra una imagen del conjunto $\mathsf{J}_c$. Esta función permite modificar los mismos parámetros que el método que acabamos de programar por nuestra cuenta\footnote{Más información en la documentación oficial: \url{https://reference.wolfram.com/language/ref/JuliaSetPlot.html?q=JuliaSetPlot}}, véanse las imágenes \ref{fig:julia-set-plot}.
+Por sí solo Mathematica incluye una función \verb|JuliaSetPlot[c]| que muestra una imagen del conjunto $\mathcal{J}_c$. Esta función permite modificar los mismos parámetros que el método que acabamos de programar por nuestra cuenta\footnote{Más información en la documentación oficial: \url{https://reference.wolfram.com/language/ref/JuliaSetPlot.html?q=JuliaSetPlot}}, véanse las imágenes \ref{fig:julia-set-plot}.
 
 \begin{figure}[ht]
   \centering
@@ -165,30 +165,30 @@ Para saber qué conjuntos de Julia son conexos y cuales no \textit{Gaston Julia}
 
 \begin{teorema}[Teorema de Fatou-Julia]
   \label{th:fatou-julia}
-  Si $\mathsf{P}_c$ contiene todos los puntos críticos de $P_c(z)$, entonces $\mathsf{J}_c=\partial \mathsf{P}_c$ es conexo. Si al menos un punto crítico de $P_c(z)$ pertenece a $\mathsf{E}_c$, entonces $\mathsf{J}_c$ es homeomorfo al conjunto de Cantor, es decir, tiene un conjunto no numerable de componentes conexas. En este último caso se conoce como <<polvo de Fatou>>.
+  Si $\mathsf{P}_c$ contiene todos los puntos críticos de $P_c(z)$, entonces $\mathcal{J}_c=\partial \mathsf{P}_c$ es conexo. Si al menos un punto crítico de $P_c(z)$ pertenece a $\mathsf{E}_c$, entonces $\mathcal{J}_c$ es isomorfo al conjunto de Cantor, es decir, tiene un conjunto no numerable de componentes conexas. En este último caso se conoce como <<polvo de Fatou>>.
 \end{teorema}
 
 En realidad el teorema en su versión original está enunciado para polinomios de grado mayor o igual que $2$, entendiendo las extensiones naturales del conjunto de puntos de escape y prisioneros. Si nos restringimos entonces a la familia $\{P_c(z)\}_{c\in\C}$, es muy sencillo caracterizar qué conjuntos de Julia son conexos y cuales son polvaredas.
 
 \begin{corolario}
   \label{th:conexo-polvareda}
-  Dado $c\in\C$, el conjunto de Julia $\mathsf{J}_c$ es conexo (resp. polvareda) si, y solo si, la sucesión de iteradas $\{P_c^n(0)\}$ no diverge (resp. diverge), es decir, si $0\in\mathsf{P}_c$ (resp. $0\in\mathsf{E}_c$).
+  Dado $c\in\C$, el conjunto de Julia $\mathcal{J}_c$ es conexo (resp. polvareda) si, y solo si, la sucesión de iteradas $\{P_c^n(0)\}$ no diverge (resp. diverge), es decir, si $0\in\mathsf{P}_c$ (resp. $0\in\mathsf{E}_c$).
 \end{corolario}
 \begin{proof}
   Es claro que $P'_c(z)=(z^2+c)'=2z$, por lo que los puntos críticos de $P_c(z)$ se alcanzan cuando $z=0$, por lo que aplicando el teorema \ref{th:fatou-julia} tenemos el resultado.
 \end{proof}
 
-Sobre la dicotomía entre qué conjuntos de Julia son conexos y cuales son polvareda surge el conocido \textbf{conjunto de Mandelbrot}, el cual adelantamos que está formado por los números complejos $c$ tales que su conjunto de Julia $\mathsf{J_c}$ es conexo. 
+Sobre la dicotomía entre qué conjuntos de Julia son conexos y cuales son polvareda surge el conocido \textbf{conjunto de Mandelbrot}, el cual adelantamos que está formado por los números complejos $c$ tales que su conjunto de Julia $\mathcal{J}_c$ es conexo. 
 
 \section{El conjunto de Mandelbrot}
 
-Como ya veníamos anunciando al final de la sección \ref{section:conexos-polvaredas}, el conjunto de Mandelbrot está formado por los $c\in\C$ tales que $\textbf{J}_c$ es conexo. La idea inicial de \textit{Benoit Mandelbrot} para graficar el conjunto que denotaremos a partir de ahora como $\mathcal{M}$ fue pintar de negro los puntos del plano cuyo conjunto de Julia fuese conexo y de blanco el resto. De entrada parece una tarea titánica graficar, para cada punto del plano (aunque realmente sería solo un subconjunto suficientemente representativo), su conjunto de Julia y decidir si éste es o no conexo, pues en algunos casos la decisión se torna muy complicada.
+Como ya veníamos anunciando al final de la sección \ref{section:conexos-polvaredas}, el conjunto de Mandelbrot está formado por los $c\in\C$ tales que $\mathcal{J}_c$ es conexo. La idea inicial de \textit{Benoit Mandelbrot} para graficar el conjunto que denotaremos a partir de ahora como $\mathcal{M}$ fue pintar de negro los puntos del plano cuyo conjunto de Julia fuese conexo y de blanco el resto. De entrada parece una tarea titánica graficar, para cada punto del plano (aunque realmente sería solo un subconjunto suficientemente representativo), su conjunto de Julia y decidir si éste es o no conexo, pues en algunos casos la decisión se torna muy complicada.
 
 Afortunadamente, gracias al teorema \ref{th:fatou-julia} y al corolario \ref{th:conexo-polvareda} esta tarea se vuelve mucho más sencilla, tan solo habría que tomar las iteradas en el origen, es decir $\{P_c^n(0)\}=\{c, c^2+c, (c^2+c)^2+c, \dots\}$ y decidir si la sucesión diverge o no mediante algún método similar al utilizado para graficar conjuntos de Julia.
 
 Por resumir, de momento sabemos que:
 \begin{eqnarray*}
-  \mathcal{M} & = & \{c\in\C : \mathsf{J}_c \text{ es conexo }\} \\
+  \mathcal{M} & = & \{c\in\C : \mathcal{J}_c \text{ es conexo }\} \\
               & = & \{c\in\C : 0\in\mathsf{P}_c \} \\
               & = & \{c\in\C : \{P_c^n(0)\}\not\rightarrow\infty\}
 \end{eqnarray*}
@@ -202,7 +202,7 @@ Buscamos ahora obtener alguna figura similar a la imagen \ref{fig:mandelbrot-int
   Dado un número complejo $c\in\C$, si $|c|>2$ entonces la sucesión de iteradas $\{P_c^n(0)\}$ es divergente.
 \end{proposicion}
 \begin{proof}
-  Consideramos la sucesión de iteradas $z_0 = 0, z_n=P_c^n(0)$. Partimos de que $|c|>2$, por lo que buscamos encontrar un $m\in\N$ tal que $|z_n|>e_c=\max\{|c|,2\}=|c|$.
+  Consideramos la sucesión de iteradas $z_0 = 0, z_n=P_c^n(0)$. Partimos de que $|c|>2$, por lo que buscamos encontrar un $m\in\N$ tal que $|z_m|>e_c=\max\{|c|,2\}=|c|$.
   
   Tenemos que $z_1=P_c(0)=c$, pero $|z_1|=|c|\not>|c|$.
   
@@ -250,7 +250,7 @@ Al igual que en el caso de los conjuntos de Julia, \textit{Mathematica} tiene un
     \includegraphics[scale=0.54]{./img/C3/Mandelbrot-Mathematica.png} &   \includegraphics[scale=0.46]{./img/C3/MandelbrotSetPlot.png} \\
   (a) Salida del código \ref{code:Mandelbrot}  & (b) Salida de la orden `MandelbrotSetPlot' \\[6pt]
   \end{tabular}
-  \caption{Representación de $\mathcal{M}$ y detalle entre $-0.65+0.47i$ y $-0.4+0.72i$}
+  \caption{Representación de $\mathcal{M}$ y detalle en $[-0.65, -0.4]\times[0.47, 0.72]$}
   \label{fig:Mandelbrot-explicado}
 \end{figure}
 
@@ -262,7 +262,7 @@ Ya en el comienzo de este capítulo mencionamos, y en las propias imágenes pres
 
 \subsection{Autosimilaridad en conjuntos de Julia}
 
-Recordemos el conjunto de Julia $\mathsf{J}_{-0.23+0.65}$, que podemos ver en la imagen \ref{fig:julia-explicados} (b). En las imágenes \ref{fig:detalles-julia} podemos ver distintos detalles, de forma que la primera es una ampliación de la original y las siguientes son cada una un `zoom' de la anterior.
+Recordemos el conjunto de Julia $\mathcal{J}_{-0.23+0.65}$, que podemos ver en la imagen \ref{fig:julia-explicados} (b). En las imágenes \ref{fig:detalles-julia} podemos ver distintos detalles, de forma que la primera es una ampliación de la original y las siguientes son cada una un `zoom' de la anterior.
 
 \begin{figure}[ht]
   \begin{tabular}{ccc}
@@ -273,15 +273,15 @@ Recordemos el conjunto de Julia $\mathsf{J}_{-0.23+0.65}$, que podemos ver en la
   \label{fig:detalles-julia}
 \end{figure}
 
-Obsérvese cómo efectivamente las imágenes, salvo giro, son prácticamente iguales, pudiendo ver así una de las regiones autosimilares de $\mathsf{J}_{-0.23+0.65}$.
+Obsérvese cómo efectivamente las imágenes, salvo giro, son prácticamente iguales, pudiendo ver así una de las regiones autosimilares de $\mathcal{J}_{-0.23+0.65}$. En las imágenes \ref{fig:mas-detalles-julia} podemos ver algunas regiones ampliadas de ciertos conjuntos de Julia, pudiendo observar regiones autosimilares.
 
 \begin{figure}[ht]
   \centering
   \begin{tabular}{cc}
     \includegraphics[scale=0.39]{./img/C3/julia-autosimilar-4.png} &   \includegraphics[scale=0.39]{./img/C3/julia-autosimilar-5.png} \\
-  (a) $\mathsf{J}_{0.33-0.41 i}$ en $[-1,-0.3]\times[-1.1,-0.4]$ & (b) $\mathsf{J}_{0.45-0.62 i}$ en $[-0.8,0.2]\times[-0.8,0.2]$ \\[6pt]
+  (a) $\mathcal{J}_{0.33-0.41 i}$ en $[-1,-0.3]\times[-1.1,-0.4]$ & (b) $\mathcal{J}_{0.45-0.62 i}$ en $[-0.8,0.2]\times[-0.8,0.2]$ \\[6pt]
   \includegraphics[scale=0.39]{./img/C3/julia-autosimilar-6.png} &   \includegraphics[scale=0.39]{./img/C3/julia-autosimilar-7.png} \\
-  (c) $\mathsf{J}_{0.23+0.51i}$ en $[-1.1,-0.4]\times[0.4,1.1]$ & (d) $\mathsf{J}_{-0.52+0.51 i}$ en $[0,1.5]\times[-1,0.5]$ \\[6pt]
+  (c) $\mathcal{J}_{0.23+0.51i}$ en $[-1.1,-0.4]\times[0.4,1.1]$ & (d) $\mathcal{J}_{-0.52+0.51 i}$ en $[0,1.5]\times[-1,0.5]$ \\[6pt]
   \end{tabular}
   \caption{Detalles autosimilares de algunos conjuntos de Julia}
   \label{fig:mas-detalles-julia}
@@ -289,7 +289,7 @@ Obsérvese cómo efectivamente las imágenes, salvo giro, son prácticamente igu
 
 \subsection{Autosimilaridad en el conjunto de Mandelbrot}
 
-El conjunto de Mandelbrot, el cual ya conocemos, está compuesto fundamentalmente de un cuerpo principal con forma de cardioide con gran catidad de bulbos adosados al mismo (imagen \ref{fig:detalles-mandelbrot} (a), (b) y (c)), siendo cada uno de estos autosimilar y terminando en una antena que se bifurca (imagen \ref{fig:detalles-mandelbrot} (b) y (c)). Además, en el propio $\mathcal{M}$ hay minúsculas copias de sí mismo, en las cuales se vuelve a repetir su estructura (imagen \ref{fig:detalles-mandelbrot} (c)).
+El conjunto de Mandelbrot, el cual ya conocemos, está compuesto fundamentalmente de un cuerpo principal con forma de cardioide con gran cantidad de bulbos adosados al mismo (imagen \ref{fig:detalles-mandelbrot} (a), (b) y (d)), siendo cada uno de estos autosimilar y terminando en una antena que se bifurca (imagen \ref{fig:detalles-mandelbrot} (b) y (c)). Además, en el propio $\mathcal{M}$ hay minúsculas copias de sí mismo, en las cuales se vuelve a repetir su estructura (imagen \ref{fig:detalles-mandelbrot} (c)).
 
 \begin{figure}[ht]
   \centering
@@ -336,11 +336,11 @@ La extensión más natural y la que nos proporcionará resultados más llamativo
 \end{figure}
 
 
-Fijémonos en que hemos fijado $c=-0.55+0.48$ y hemos variado el exponente de la función polinómica. Llama la atención lo distintos que son los conjuntos entre sí cuando realmente el $c$ fijado es el mismo en todos los casos. 
+Fijémonos en que hemos fijado $c=-0.55+0.48i$ y hemos variado el exponente de la función polinómica. Llama la atención lo distintos que son los conjuntos entre sí cuando realmente el $c$ fijado es el mismo en todos los casos. 
 
 Como ya comentamos en la sección \ref{section:conexos-polvaredas}, el teorema \ref{th:fatou-julia} (teorema de la dicotomía de Fatou-Julia) es válido para cualquier polinomio de grado mayor o igual que 2, en particular es válido para la familia de funciones $\{P_{c,N}(z)\}_{c\in\C}$. Tenemos por tanto que de la misma forma es válido el corolario, por lo que la distinción entre conjuntos de Julia conexos y polvaredas se vuelve a basar en buscar la convergencia o divergencia de la sucesión $\{P_{c,N}^n(0)\}$.
 
-De esta forma, podemos hablar por tanto de conjuntos de Mandelbrot generalizados como representación gráfica de qué puntos tienen un conjunto de Julia conexo o polvareda utilizando la función $P_{c,N}(z)$, en cuyo lo denotamos como $\mathcal{M}_N$. De la misma forma que el resultado \ref{th:escape} es válido en la generalización, la proposición \ref{prop:mandelbrot-escape} también lo es, por lo que podemos también reutilizar el código que empleamos para representar el conjunto de Mandelbrot con tan solo variar el exponente, ver imágenes \ref{fig:mandelbrot-generalizados}. Por su parte, la función de \textit{Mathematica} \verb|MandelbrotSetPlot| admite un argumento \verb|n| que representa el exponente de $P_{c,N}(z).$ a la hora de iterar.
+De esta forma, podemos hablar por tanto de conjuntos de Mandelbrot generalizados como representación gráfica de qué puntos tienen un conjunto de Julia conexo o polvareda utilizando la función $P_{c,N}(z)$, el cual denotamos como $\mathcal{M}_N$. De la misma forma que el resultado \ref{th:escape} es válido en la generalización, la proposición \ref{prop:mandelbrot-escape} también lo es, por lo que podemos también reutilizar el código que empleamos para representar el conjunto de Mandelbrot con tan solo variar el exponente, ver imágenes \ref{fig:mandelbrot-generalizados}. Por su parte, la función de \textit{Mathematica} \verb|MandelbrotSetPlot| admite un argumento \verb|n| que representa el exponente de $P_{c,N}(z).$ a la hora de iterar.
 
 \begin{figure}[ht]
   \centering
@@ -348,6 +348,8 @@ De esta forma, podemos hablar por tanto de conjuntos de Mandelbrot generalizados
   \caption{Conjuntos de Mandelbrot $\mathcal{M}_N$ para $N=3,4,8,10$}
   \label{fig:mandelbrot-generalizados}
 \end{figure}
+
+Obsérvese que a pesar de encontrar cierta similaridad en la formas de los distintos conjuntos de Mandelbrot generalizados, podemos encontrar puntos que para unos exponentes se encuentran dentro y en otros casos fuera de su respectivo $\mathcal{M}_N$. Este hecho explica lo ocurrido con $c=-0.55+0.48i$, que para ciertos exponentes el conjunto de Julia es conexo y para otros es polvareda.
 
 Finalmente, invitamos al lector a visitar una web interactiva en la que poder visualizar tantos conjuntos de Julia y Mandelbrot estándar y generalizados como desee. La web forma parte del proyecto y su url es \url{https://jantoniovr.github.io/Geometria-Fractal/}(WIP).%TODO Modificar si es necesario esta URL
 
